# minigrep

./: CMakeLists.txt  setup_googletest.cmake
lib/: config.cpp  config.hpp  str_processing.cpp  str_processing.h  string_processing.cpp  string_processing.h
src/: main.cpp
test/: str_processing_test.cpp  test.cpp
